--- a/Nodejs-master/package.json
+++ b/Nodejs-master/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "schedulex",
+  "name": "work_management",
   "version": "1.0.0",
   "description": "first module",
   "main": "src/index.js",
@@ -9,7 +9,7 @@
     "watch": "node-sass src/resources/scss -o src/public/css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "tung",
+  "author": "duc",
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.5",
